--- a/vacations/vacations/vacations.csproj
+++ b/vacations/vacations/vacations.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TitileFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TitileFrm.Designer.cs">
+      <DependentUpon>TitileFrm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EmpAddFrm.resx">
       <DependentUpon>EmpAddFrm.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +82,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TitileFrm.resx">
+      <DependentUpon>TitileFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
